--- a/MyCars/Base.lproj/Main.storyboard
+++ b/MyCars/Base.lproj/Main.storyboard
@@ -85,11 +85,11 @@
                                     <constraint firstAttribute="width" secondItem="EBF-SL-e0f" secondAttribute="height" multiplier="16:15" constant="77.866666666666674" id="ONe-nQ-q1u"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="16"/>
-                                <state key="normal" title="Start engine" backgroundImage="button">
+                                <state key="normal" title="Завести" backgroundImage="button">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="startEnginePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="z2V-Iu-Tmf"/>
+                                    <action selector="onStartEngineClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GCG-9e-3ff"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Model" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ae3-R4-0sU">
@@ -106,11 +106,11 @@
                                     <constraint firstAttribute="width" secondItem="gVL-cf-F3L" secondAttribute="height" multiplier="23:15" constant="62.93333333333333" id="I5G-zO-5W2"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="16"/>
-                                <state key="normal" title="Rate" backgroundImage="button">
+                                <state key="normal" title="Рейтинг" backgroundImage="button">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="rateItPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Hm8-LP-e5S"/>
+                                    <action selector="onRateClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1Wf-3x-JKR"/>
                                 </connections>
                             </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="K7t-Io-l67">
@@ -127,11 +127,11 @@
                                     <segment title="BMW"/>
                                 </segments>
                                 <connections>
-                                    <action selector="segmentedCtrlPressed:" destination="BYZ-38-t0r" eventType="valueChanged" id="54X-Uh-3t6"/>
+                                    <action selector="onSegmentedCtrlClick:" destination="BYZ-38-t0r" eventType="valueChanged" id="6gK-6S-liY"/>
                                 </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="right" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Последний раз заводилась" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="G2o-hn-kis">
-                                <rect key="frame" x="16" y="246" width="199.5" height="20.5"/>
+                                <rect key="frame" x="16" y="246" width="200" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20.5" id="RLh-V0-BjI"/>
                                     <constraint firstAttribute="width" constant="199.5" id="xKW-5t-l4p"/>
@@ -141,7 +141,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Количество поездок:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4vE-tz-7QG">
-                                <rect key="frame" x="16" y="284" width="155.5" height="20.5"/>
+                                <rect key="frame" x="16" y="284" width="156" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="155.5" id="TO4-tQ-4nS"/>
                                     <constraint firstAttribute="height" constant="20.5" id="heC-oq-4wi"/>
@@ -151,7 +151,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JcZ-hr-jsn">
-                                <rect key="frame" x="16" y="308" width="63.5" height="20.5"/>
+                                <rect key="frame" x="16" y="308" width="64" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="63.5" id="blB-MI-ueE"/>
                                     <constraint firstAttribute="height" constant="20.5" id="gPd-uH-jUz"/>
@@ -160,8 +160,19 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HLP-ke-VcG">
+                                <rect key="frame" x="104" y="396" width="112" height="112"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="112" id="1L5-j8-cqb"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="112" id="PWW-da-DHV"/>
+                                    <constraint firstAttribute="height" constant="112" id="VBq-LQ-m2N"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="onRewardClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="W2X-bh-OcI"/>
+                                </connections>
+                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="myChoice" translatesAutoresizingMaskIntoConstraints="NO" id="kf4-K5-etc">
-                                <rect key="frame" x="106" y="396.5" width="109" height="109"/>
+                                <rect key="frame" x="106" y="397" width="109" height="109"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="109" id="2OQ-7r-Mvx"/>
                                     <constraint firstAttribute="height" constant="109" id="Jdx-Dm-oA1"/>
@@ -173,6 +184,7 @@
                             <constraint firstAttribute="leadingMargin" secondItem="vrI-az-Cj6" secondAttribute="leading" id="2lF-QG-hBX"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="EBF-SL-e0f" secondAttribute="bottom" constant="24" id="49E-UZ-CJD"/>
                             <constraint firstItem="4vE-tz-7QG" firstAttribute="top" secondItem="G2o-hn-kis" secondAttribute="bottom" constant="17.5" id="4VU-0K-id5"/>
+                            <constraint firstItem="HLP-ke-VcG" firstAttribute="top" secondItem="K7t-Io-l67" secondAttribute="bottom" constant="10" id="8AU-sx-7AE"/>
                             <constraint firstItem="kf4-K5-etc" firstAttribute="top" secondItem="K7t-Io-l67" secondAttribute="bottom" constant="10.5" id="8qW-0I-i35"/>
                             <constraint firstItem="xoV-Aa-l8K" firstAttribute="top" secondItem="vrI-az-Cj6" secondAttribute="bottom" constant="17" id="9Yo-2L-ohA"/>
                             <constraint firstItem="HnH-CP-jBu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="E2r-Ot-RbV"/>
@@ -194,6 +206,7 @@
                             <constraint firstItem="HnH-CP-jBu" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="gkU-5b-Syr"/>
                             <constraint firstAttribute="trailingMargin" secondItem="vrI-az-Cj6" secondAttribute="trailing" id="n0h-eG-wWj"/>
                             <constraint firstItem="K7t-Io-l67" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="oik-BN-JIM"/>
+                            <constraint firstItem="HLP-ke-VcG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qKF-hH-Ebb"/>
                             <constraint firstItem="HnH-CP-jBu" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="19:75" id="rv7-sw-6t3"/>
                             <constraint firstItem="ae3-R4-0sU" firstAttribute="centerX" secondItem="HnH-CP-jBu" secondAttribute="centerX" id="tVB-zn-QOu"/>
                             <constraint firstItem="kf4-K5-etc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wdJ-0m-Iyb"/>
